==4/05/2009==
Derision: GM Training: SoF - Points now update correctly in the Training Window.
Derision: GM Training: Points now update correctly in the Training Window for languages.
Derision: GM Training: The correct amount of money is deducted from the player profile.
Derision: SoF - Mapped findable field in Spawn struct and OP_FindPersonRequest/Reply.
Derision: SoF - Duelling now works.

==4/04/2009==
Derision: Tracking: Now works in SoF and as a side effect, Tracking 'sort by distance' works properly in 6.2 and Titanium clients.

==4/03/2009==
Congdar: Bots - Added Healing and Lifetap AA's and Focus Effect support
Derision: SoF - Fix for incorrect animation (NPCs frozen/walking while standing still).

==3/29/2009==
Derision: SoF - OP_PetBuffWindow, OP_Charm, OP_Stun

==3/28/2009==
Derision: SoF - Tasks now work.
Derision: SoF - OP_Sacrifice, OP_Sound, OP_OnLevelMessage, OP_PopupResponse
Derision: Item Links in Task Descriptions are now formatted correctly based on the client version.

==3/25/2009==
Derision: 'Hack' to display Froglok/Drakkin corpses correctly.
Derision: SoF - OP_Translocate & OP_LevelAppearance

==3/23/2009==
Trevius: SoF - Corrected Right Click item effects so they no longer fizzle
Trevius: SoF - Right Clickable item effects with set recast delays now observe that delay properly
Trevius: SoF - Item Effect Charges now get used and updated properly
Trevius: SoF - Food and Drink are now consumed at the proper rates

==3/21/2009==
Derision: Implemented 'Your total time entitled on this account' in /played.

==3/20/2009==
Trevius: SoF - Fixed a fairly major crashed caused when attempting to use the 8 new bank slots, or shared bank
Trevius: SoF - Banking is now fully functional including the 8 new bank slots, shared bank and bag slots in the bank
Trevius: SoF - Bandolier and Potion Belt are now both functional
Trevius: SoF - Filled in multiple missing opcodes

==3/19/2009==
Trevius: SoF - Grouping should now be fully functional